# halleypack-rust

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  steam.rs
src/halley/: mod.rs
src/halley/assets/: compression.rs  mod.rs  palette.rs  property_file.rs  serialization.rs  unpack.rs  utils.rs
src/halley/versions/: mod.rs
src/halley/versions/common/: config.rs  hpk.rs  hpk_parse.rs  hsave.rs  mod.rs  primitives.rs
src/halley/versions/v2020/: animation.rs  hpk.rs  mod.rs  spritesheet.rs
src/halley/versions/v2023/: animation.rs  audio_event.rs  hlif.rs  hpk.rs  mod.rs  spritesheet.rs
