[package]
name = "wgpack"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "wgpack"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
base64 = "0.21.4"
cookie-factory = "0.3.2"
derivative = "2.2.0"
derive-new = "0.5.9"
flate2 = "1.0.27"
image = "0.24.7"
libaes = "0.7.0"
lz4 = "1.24.0"
nom = "7.1.3"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
toml = { version = "0.8.8", features = ["preserve_order"] }
walkdir = "2.4.0"
