[package]
name = "halleypack"
version = "0.1.1"
edition = "2021"


[[bin]]
name = "halleypack"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
base64 = "0.21.4"
cookie-factory = "0.3.2"
derivative = "2.2.0"
derive-new = "0.5.9"
flate2 = "1.0.27"
image = "0.24.7"
libaes = "0.7.0"
lz4 = "1.24.0"
nom = "7.1.3"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.5"
walkdir = "2.4.0"
serde = { version = "1.0.188", features = ["derive"] }
json5 = "0.4.1"
toml = { version = "0.8.8", features = ["preserve_order"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
indexmap = { version = "2.1.0", features = ["serde"] }
serde_yaml = "0.9.27"
rayon = "1.8.0"
jsonxf = "1.1.1"
path-slash = "0.2.1"
clippy = "0.0.302"
